# Order-Service_Clean-Architecture

./: .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml
alembic/: env.py
alembic/versions/: 3044086c588e_add_amount_to_orders.py  4f46e3d81707_add_outbox_and_inbox_tables.py  6774f37f3977_rename_orders_to_orders_v2_and_fix_.py  8a62f55ae99e_add_outbox_and_inbox_tables.py  9dd4753dc7b5_change_idempotency_key_to_string.py  a0ad704f6e0a_create_orders_table.py
app/: config.py
app/application/: create_order.py  get_order.py  interfaces.py  process_outbox_events.py  process_payment_callback.py  process_shipment_event.py
app/core/: models.py
app/infrastructure/: db_schema.py  http_clients.py  kafka_consumer.py  kafka_producer.py  repositories.py  unit_of_work.py
app/infrastructure/workers/: kafka_consumer_worker.py  outbox_worker.py
app/presentation/: api.py  dependencies.py  kafka_consumer_worker.py  outbox_worker.py  schemas.py
